--- a/style.css
+++ b/style.css
@@ -31,6 +31,9 @@ main {
    transform: translateY(-50%);
    line-height: 70px;
    font-size: 18px;
+}
+
+.counter:not(.counter span) {
    writing-mode: vertical-rl;
    text-orientation: upright;
 }
